Fix header z-index

--- a/src/modules/app/components/AppHeader/_style.scss
+++ b/src/modules/app/components/AppHeader/_style.scss
@@ -19,7 +19,7 @@
     border-bottom: var(--appheader-border-bottom);
     background: var(--appheader-background);
 
-    z-index: var(--f-zindex-sticky);
+    z-index: var(--f-zindex-fixed);
 
     //flex ali-center gap-2 juc-space-between
 
